--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,15 @@
+body.dark{
+  background: var(--bg-black);
+  color: var(--color-white);
+  transition: all .7s ease;
+}
+
 /* ======================================== */
       /* ESTILOS DEL HEADER/MENU */
 /* ======================================== */
 
 .header{
-  background: #C9C9C9;
+  background: transparent;
   margin-top: var(--margin-top);
   padding: 0 5px;
 }
@@ -11,12 +17,13 @@
   display: none;
 }
 .logo{
-  font-size: var(--size-1-5);
+  /* font-size: var(--size-1-5); */
+  width: 70px;
 }
-.logo span{
+/* .logo span{
   font-size: var(--size-1-8);
   color: #008806;
-}
+} */
 .navigation a{
   display: inline-block;
   padding: .5rem 1rem;
@@ -54,6 +61,54 @@
   }
 }
 
+/* ======================================== */
+              /* SWICHT */
+/* ======================================== */
+
+.swicht{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 80px;
+  position: relative;
+  right: 0;
+  background: #373737;
+  border: 0;
+  outline: none;
+  border-radius: 1000px;
+  margin: 30px auto;
+  transition: all .7s ease;
+}
+.swicht span{
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  background: none;
+  color: #FFF;
+}
+.swicht::after{
+  content: "";
+  display: block;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  background: #E2E2E2;
+  top: 0;
+  left: 0;
+  right: unset;
+  border-radius: 50%;
+  transition: all .3s ease;
+  box-shadow:inset 0 0 2px 2px rgba(0, 0, 0, .2);
+  transition: all .7s ease;
+}
+.swicht.activeLive{
+  background: #FFB500;
+  color: var(--color-black);
+}
+.activeLive::after{
+  right: 0;
+  left: unset;
+}
 
 /* ======================================== */
         /* ESTILOS DEL MODAL */
@@ -142,4 +197,74 @@
 }
 .slider__btn__left{
   left: 20px;
+}
+
+/* ======================================== */
+              /* GALERIA */
+/* ======================================== */
+.galeria img{
+  display: block;
+  width: 100%;
+  height: 350px;
+  object-fit: cover;
+  transition: transform .5s;
+}
+.galeria > a{
+  display: block;
+  position: relative;
+  overflow: hidden;
+  object-fit: cover;
+  box-shadow: 0 0 6px rgba(0, 0, 0, .5);
+  transition: .7s ease-in-out all;
+}
+.galeria a:hover img{
+  filter: blur(2px);
+  transform: rotate(10deg) scale(1);
+}
+
+.light__box{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 1000;
+  background: rgba(0, 0, 0, .6);
+  transition: transform .4s ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: scale(0);
+}
+.light__box img{
+  width: 75%;
+  /* max-height: 70vh; */
+}
+.light__box:target{
+  transform: scale(1);
+}
+.close{
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 30px;
+  right: 30px;
+  width: 50px;
+  height: 50px;
+  background: #FF0000;
+  border-radius: 50%;
+  color: var(--color-white);
+  font-size: var(--size-1-9);
+  font-weight: bold;
+}
+.next,
+.prev{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  background: #FF0000;
+  color: var(--color-white);
 }
