--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ body.dark{
 .content__modal{
   width: 100%;
   height: 100vh;
-  background: #333333A8;
+  background: #FFFFFF;
   position: fixed;
   top: 0;
   left: 0;
@@ -126,6 +126,7 @@ body.dark{
   align-items: center;
   transition: all 1s;
   animation: ventana 1s;
+  z-index: 2;
 }
 .modal{
   width: 90%;
@@ -229,7 +230,7 @@ body.dark{
   width: 100%;
   height: 100vh;
   z-index: 1000;
-  background: rgba(0, 0, 0, .6);
+  background: #FFFFFF;
   transition: transform .4s ease-in-out;
   display: flex;
   justify-content: center;
